--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -74,6 +74,10 @@ h1.hero-title {
   width: 55px;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 50%;
+  transition: all 0.3s ease;
+}
+.hero-socials-link:hover {
+  border-color: rgba(250, 250, 250, 0.9);
 }
 .hero-email {
   display: flex;
@@ -84,6 +88,10 @@ h1.hero-title {
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 27.5px;
   padding: 0 24px;
+  transition: all 0.3s ease;
+}
+.hero-email:hover {
+  border-color: rgba(250, 250, 250, 0.9);
 }
 /* #endregion SOCIALS AND EMAIL*/
 
