--- a/src/css/layout/menu.css
+++ b/src/css/layout/menu.css
@@ -99,7 +99,7 @@
   justify-content: center;
   border: none;
   background: transparent;
-  padding: 40px;
+  padding: 32px 16px;
 }
 .cross-dash {
   position: absolute;
